Handled some edge cases.